export enum StoneStatus {
    NONE,
    BLACK,
    WHITE,
}